2006-04-04  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_LdsOrd.py: lds status changes
	* src/Editors/_EditLdsOrd.py: lds status changes
	* src/DisplayTabs.py: lds status changes
	* src/GrampsWidgets.py: lds status changes
	* src/glade/gramps.glade: lds status changes
	* src/lds.py: lds status changes

2006-04-04  Alex Roitman  <shura@gramps-project.org>
	* README, INSTALL: update.

2006-04-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: new upgrade for LDS change
	* src/Editors/_EditLdsOrd.py: addedn
	* src/Editors/__init__.py: add EditLdsOrd
	* src/Editors/_EditPerson.py: LDS support
	* src/RelLib/_LdsOrdBase.py: added
	* src/RelLib/_Person.py: use a list of LdsOrds
	* src/RelLib/_Family.py: use a list of LdsOrds
	* src/RelLib/_LdsOrd.py: add type field
	* src/DisplayTabs.py: lds tab
	* src/GrampsWidgets.py: menus
	* src/glade/gramps.glade: lds support
	* src/lds.py: additional support

2006-04-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Fix lds ord; Add new option
	to put a linebreak into each textfield

2006-04-03  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/_ImgManip.py: fix typo
	* src/plugins/DetDescendantReport.py: remove use of deprecated functions
	* src/plugins/DescendReport.py: fix death dates

2006-04-02  Don Allingham  <don@gramps-project.org>
	* src/PluginUtils/Plugins.py: Fix args
	* src/GrampsWidgets.py: Fix place autocompletion
	* src/glade/gramps.glade: start of LDS Ord editor

2006-04-01  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: dbstate.active fixes
	* src/GrampsDb/_GrampsDbBase.py: dbstate.active fixes
	* src/Exporter.py: dbstate.active fixes
	* src/RelLib/_DateBase.py: remove unused stuff 
	* src/DisplayState.py: Remove managed window
	* src/PluginUtils/_ReportUtils.py: fix check
	* src/PageView.py: dbstate.active fixes
	* src/ManagedWindow.py: add assertions
	* autogen.sh: require automake 1.9
